--- a/node/package.json
+++ b/node/package.json
@@ -11,11 +11,12 @@
   "author": "seongmin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bootstrap": "^5.3.2",
     "dotenv": "^5.0.1",
-    "nodemon": "^1.17.3",
     "ejs": "^2.5.7",
-    "request": "^2.83.0",
-    "pg": "^7.4.1"
+    "express": "^4.18.2",
+    "nodemon": "^1.17.3",
+    "pg": "^7.4.1",
+    "request": "^2.83.0"
   }
 }
