feat: add connection to server.js

--- a/node/config/.env
+++ b/node/config/.env
@@ -1,3 +1,8 @@
 
 SERVER_PORT = 3000
 FILE_PATH = '/page'
+DB_PATH = 'localhost'
+DB_PORT = 5432
+DB_NAME = 'edulog'
+DB_USER = 'kikiki123'
+DB_PASSWD = '3787'
